# DoubleAdapt

./: README.md  create_dataset.py  main.py  pyproject.toml
src/: handler.py  model.py  train_tool.py  trainner.py
src/double_adapt/: dataset.py  handler.py  high_pass_3_filter.py  higher_optim.py  loss_accumulator.py  model.py  trainer.py  trainner.py
src/models/: fuse_model.py  gru.py  tlob.py
src/tlob/: bin.py  mlplob.py  readme.MD
