[project]
name = "doubleadpt"
version = "0.1.0"
description = "Double Adaptation Framework for Time Series Prediction"
authors = [{ name = "Author" }]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
    "torchmetrics>=0.11.0",  # 添加 torchmetrics
    "higher>=0.2.1",
    "seaborn>=0.11.0",
    "einops>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["doubleadpt"]